--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -16,3 +16,8 @@ spring:
     show_sql: true
   main:
     web-application-type: servlet
+  servlet:
+    multipart:
+      max-file-size: 128GB
+      max-request-size: 128GB
+
